# UCS-Bench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  READMD_cn.md  README.md  demo_qa_results.json  ex_log.md  pyproject.toml  requirements.txt  run_pipeline.sh  启动项目指令.md
.github/workflows/: ci.yml
configs/: default.yaml
configs/scal3r/: base.yaml  scal3r.yaml
directme/: __init__.py  cli.py  config.py  demo.py  pipeline.py
directme/demo/: README.md  __init__.py  __main__.py  demo.py  export_dense_map.py  qwen_4bit_32frames_results.json  qwen_scene0804_results.json  sample_qa.json  sample_qa_inside.json  web_server.py
directme/demo/web/: alignment_config.json  app.js  debug.html  debug.js  index.html  styles.css  viewer_core.js
directme/eval/: __init__.py  eval_ucsbench.py  sample_questions.jsonl  ucsbench.py
directme/geometry/: __init__.py  poses.py  unprojection.py
directme/mapping/: __init__.py  async_engine.py  keyframe_selector.py  offline_engine.py  place_induction.py  pose_propagation.py  scene_graph.py
directme/perception/: __init__.py  artifacts.py  base.py  color_attributes.py  ingest.py  runtime.py  scene_classifier.py  scene_tagger.py  test_perception_stack.py  toy.py
directme/perception/adapters/: Object.yaml  __init__.py  composed.py  depth_anything3.py  open_vocab_tracking.py  scal3r.py  (+1 more)
directme/qa/: __init__.py  generator.py  openai_compatible.py  prompts.py
directme/retrieval/: __init__.py  egocentric.py  pose_lookup.py  query_parser.py  retriever.py
directme/storage/: __init__.py  json_store.py  sqlite_store.py
directme/viz/: __init__.py  topdown.py
docs/: adapter_guide.md  algorithm_notes.md  architecture.md  quickstart.md  roadmap.md  schema.md
docs/vis_docs/: README.md
examples/: evaluate_ucsbench_vlm.py  run_real_pipeline.py  run_toy_demo.py  run_vlm_pipeline.py  visualize_graph.py
tests/: test_async_engine.py  test_bbox_unprojection.py  test_color.py  test_da3_conversion.py  test_drift_telemetry.py  test_egocentric_relations.py  test_eval_ucsbench.py  test_geometry.py  test_ingest.py  test_keyframe_selector.py  test_offline_engine.py  test_place_induction.py  test_pose_failure.py  test_pose_lookup.py  test_prompt_builder.py  test_query_parser_boundaries.py  test_retrieval.py  test_retrieval_room_filter.py  test_runtime_device.py  test_scene_graph.py  test_semantic_embedding.py  test_sqlite_store.py  test_tracker.py
